# android_sdl2_ttf_net_image_mixer-demos

./: README.md
src/videoplayer/: settings.gradle
src/videoplayer/app/: build.gradle
src/videoplayer/app/src/androidTest/java/org/libsdl/app/: ExampleInstrumentedTest.java
src/videoplayer/app/src/main/: AndroidManifest.xml
src/videoplayer/app/src/main/cpp/: CMakeLists.txt  SDL_android_main.cpp  cmdutils.c  cmdutils.h  five.cpp  fivedata.cpp  fivedata.h  main-ffplay.c  main-play-video.cpp  main.cpp  native-lib.cpp  readme.md
src/videoplayer/app/src/main/cpp/jniLibs/: readme.md
src/videoplayer/app/src/main/java/org/libsdl/app/: ListViewActivity.java  SDLActivity.java
src/videoplayer/app/src/main/res/layout/: activity_main.xml
src/videoplayer/gradle/wrapper/: gradle-wrapper.properties
